--- a/Form2.resx
+++ b/Form2.resx
@@ -121,32 +121,32 @@
   <data name="filterPanel.AutoScroll" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label9.AutoSize" type="System.Boolean, mscorlib">
+  <data name="tipoTitle.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label9.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="tipoTitle.Location" type="System.Drawing.Point, System.Drawing">
     <value>8, 420</value>
   </data>
-  <data name="label9.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="tipoTitle.Size" type="System.Drawing.Size, System.Drawing">
     <value>31, 13</value>
   </data>
-  <data name="label9.TabIndex" type="System.Int32, mscorlib">
+  <data name="tipoTitle.TabIndex" type="System.Int32, mscorlib">
     <value>42</value>
   </data>
-  <data name="label9.Text" xml:space="preserve">
+  <data name="tipoTitle.Text" xml:space="preserve">
     <value>Tipo:</value>
   </data>
-  <data name="&gt;&gt;label9.Name" xml:space="preserve">
-    <value>label9</value>
+  <data name="&gt;&gt;tipoTitle.Name" xml:space="preserve">
+    <value>tipoTitle</value>
   </data>
-  <data name="&gt;&gt;label9.Type" xml:space="preserve">
+  <data name="&gt;&gt;tipoTitle.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label9.Parent" xml:space="preserve">
+  <data name="&gt;&gt;tipoTitle.Parent" xml:space="preserve">
     <value>filterPanel</value>
   </data>
-  <data name="&gt;&gt;label9.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;tipoTitle.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -158,6 +158,9 @@
   </data>
   <data name="button1.Location" type="System.Drawing.Point, System.Drawing">
     <value>10, 484</value>
+  </data>
+  <data name="button1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 3, 3, 10</value>
   </data>
   <data name="button1.Size" type="System.Drawing.Size, System.Drawing">
     <value>29, 23</value>
@@ -182,6 +185,9 @@
   </data>
   <data name="label17.Location" type="System.Drawing.Point, System.Drawing">
     <value>46, 489</value>
+  </data>
+  <data name="label17.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 0, 3, 10</value>
   </data>
   <data name="label17.Size" type="System.Drawing.Size, System.Drawing">
     <value>87, 13</value>
@@ -642,6 +648,9 @@
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
     <value>46, 34</value>
   </data>
@@ -879,94 +888,97 @@
   <data name="&gt;&gt;button02.ZOrder" xml:space="preserve">
     <value>26</value>
   </data>
-  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
+  <data name="cursoTitle.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="cursoTitle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="cursoTitle.Location" type="System.Drawing.Point, System.Drawing">
     <value>4, 207</value>
   </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="cursoTitle.Size" type="System.Drawing.Size, System.Drawing">
     <value>37, 13</value>
   </data>
-  <data name="label3.TabIndex" type="System.Int32, mscorlib">
+  <data name="cursoTitle.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
   </data>
-  <data name="label3.Text" xml:space="preserve">
+  <data name="cursoTitle.Text" xml:space="preserve">
     <value>Curso:</value>
   </data>
-  <data name="&gt;&gt;label3.Name" xml:space="preserve">
-    <value>label3</value>
+  <data name="&gt;&gt;cursoTitle.Name" xml:space="preserve">
+    <value>cursoTitle</value>
   </data>
-  <data name="&gt;&gt;label3.Type" xml:space="preserve">
+  <data name="&gt;&gt;cursoTitle.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label3.Parent" xml:space="preserve">
+  <data name="&gt;&gt;cursoTitle.Parent" xml:space="preserve">
     <value>filterPanel</value>
   </data>
-  <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;cursoTitle.ZOrder" xml:space="preserve">
     <value>27</value>
   </data>
-  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+  <data name="turnoTitle.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="turnoTitle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="turnoTitle.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 122</value>
   </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="turnoTitle.Size" type="System.Drawing.Size, System.Drawing">
     <value>38, 13</value>
   </data>
-  <data name="label2.TabIndex" type="System.Int32, mscorlib">
+  <data name="turnoTitle.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
   </data>
-  <data name="label2.Text" xml:space="preserve">
+  <data name="turnoTitle.Text" xml:space="preserve">
     <value>Turno:</value>
   </data>
-  <data name="&gt;&gt;label2.Name" xml:space="preserve">
-    <value>label2</value>
+  <data name="&gt;&gt;turnoTitle.Name" xml:space="preserve">
+    <value>turnoTitle</value>
   </data>
-  <data name="&gt;&gt;label2.Type" xml:space="preserve">
+  <data name="&gt;&gt;turnoTitle.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
+  <data name="&gt;&gt;turnoTitle.Parent" xml:space="preserve">
     <value>filterPanel</value>
   </data>
-  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;turnoTitle.ZOrder" xml:space="preserve">
     <value>28</value>
   </data>
-  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
+  <data name="serieTitle.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="serieTitle.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="serieTitle.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 10</value>
   </data>
-  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="serieTitle.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="serieTitle.Size" type="System.Drawing.Size, System.Drawing">
     <value>34, 13</value>
   </data>
-  <data name="label1.TabIndex" type="System.Int32, mscorlib">
+  <data name="serieTitle.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="serieTitle.Text" xml:space="preserve">
     <value>Série:</value>
   </data>
-  <data name="&gt;&gt;label1.Name" xml:space="preserve">
-    <value>label1</value>
+  <data name="&gt;&gt;serieTitle.Name" xml:space="preserve">
+    <value>serieTitle</value>
   </data>
-  <data name="&gt;&gt;label1.Type" xml:space="preserve">
+  <data name="&gt;&gt;serieTitle.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label1.Parent" xml:space="preserve">
+  <data name="&gt;&gt;serieTitle.Parent" xml:space="preserve">
     <value>filterPanel</value>
   </data>
-  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;serieTitle.ZOrder" xml:space="preserve">
     <value>29</value>
   </data>
   <data name="filterPanel.Location" type="System.Drawing.Point, System.Drawing">
@@ -976,7 +988,7 @@
     <value>0, 0, 0, 20</value>
   </data>
   <data name="filterPanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>225, 644</value>
+    <value>225, 430</value>
   </data>
   <data name="filterPanel.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -1024,7 +1036,7 @@
     <value>0</value>
   </data>
   <data name="filterButtonPanel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>29, 475</value>
+    <value>503, 435</value>
   </data>
   <data name="filterButtonPanel.Size" type="System.Drawing.Size, System.Drawing">
     <value>225, 61</value>
@@ -1045,7 +1057,7 @@
     <value>3</value>
   </data>
   <data name="linePanel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>29, 475</value>
+    <value>503, 435</value>
   </data>
   <data name="linePanel.Size" type="System.Drawing.Size, System.Drawing">
     <value>225, 10</value>
